Modified Index, finished Apple Pie page and added two more recipes

--- a/recipes/pitapizza.html
+++ b/recipes/pitapizza.html
@@ -7,31 +7,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Odin Recipes</title>
+        <title>Pita Pizza Recipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/odin-recipes/style.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Odin Recipes</h1>
-        <ul style="list-style-type: none;">
-            <li><a href="./recipes/applepie.html"><img src="./images/apple_pie.jpg" width="200" height="200" alt="image of an apple pie"></a>
-                <br>
-                <a href="./recipes/applepie.html">Apple Pie</a>🥧
-            </li>
-            <br>
-            <li>
-                <a href="./recipes/applepie.html">Bang Bang Shrimp</a>🍤
-            </li>
-            <br>
-            <li>
-                <a href="./recipes/applepie.html">Low Calorie Pita Pizza</a>🍕
-            </li>
-        </ul>
-
         
         <script src="" async defer></script>
     </body>
