--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -7,17 +7,39 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Apple Pie Recipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/odin-recipes/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <a href="/odin-recipes/index.html">Home</a>
         <h1>Apple Pie</h1>
-        
+        <img src="../images/apple_pie.jpg" width="400" height="400" alt="image of an apple pie">
+        <h3>Description:</h3>
+        <p>A flaky, golden Apple pie that's sure to make your Thanksgiving extra special and delight your loved ones.</p>
+
+        <h3>Ingredients:</h3>
+            <ul>
+                <li>1 recipe pastry for a 9 inch double crust pie</li>
+                <li>½ cup unsalted butter</li>
+                <li>3 tablespoons all-purpose flour</li>
+                <li>¼ cup water</li>
+                <li>½ cup white sugar</li>
+                <li>½ cup packed brown sugar</li>
+                <li>8 Granny Smith apples - peeled, cored and sliced</li>
+            </ul>
+
+        <h3>Steps:</h3>
+            <ol>
+                <li>Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce temperature and let simmer.</li>
+                <li>Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so that it does not run off.</li>
+                <li>Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li>
+            </ol>
+
         <script src="" async defer></script>
     </body>
 </html>
