--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
         <![endif]-->
         <h1>Odin Recipes</h1>
         <ul style="list-style-type: none;">
-            <li><a href="./recipes/applepie.html"><img src="./images/apple_pie.jpg" width="200" height="200" alt="image of an apple pie"></a>
+            <li>
+                <a href="./recipes/applepie.html"><img src="./images/apple_pie.jpg" width="200" height="200" alt="image of an apple pie"></a>
                 <br>
                 <a href="./recipes/applepie.html">Apple Pie</a>🥧
             </li>
             <br>
             <li>
-                <a href="./recipes/applepie.html">Bang Bang Shrimp</a>🍤
+                <a href="./recipes/bangbangshrimp.html"><img src="./images/bang_bang_shrimp.jpg" width="200" height="200" alt="image of bang bang shrimp"></a>
+                <br>
+                <a href="./recipes/bangbangshrimp.html">Bang Bang Shrimp</a>🍤
             </li>
             <br>
             <li>
-                <a href="./recipes/applepie.html">Low Calorie Pita Pizza</a>🍕
+                <a href="./recipes/pitapizza.html"><img src="./images/pita_pizza.jpg" width="200" height="200" alt="image of pita pizzas"></a>
+                <br>
+                <a href="./recipes/pitapizza.html">Low Calorie Pita Pizza</a>🍕
             </li>
         </ul>
 
