Finished project, added some CSS

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Odin Recipes</h1>
+        <h1>My favorite Recipes!</h1>
         <ul style="list-style-type: none;">
             <li>
                 <a href="./recipes/applepie.html"><img src="./images/apple_pie.jpg" width="200" height="200" alt="image of an apple pie"></a>
                 <br>
-                <a href="./recipes/applepie.html">Apple Pie</a>🥧
+                <a href="./recipes/applepie.html">Apple Pie</a> 🥧
             </li>
             <br>
             <li>
                 <a href="./recipes/bangbangshrimp.html"><img src="./images/bang_bang_shrimp.jpg" width="200" height="200" alt="image of bang bang shrimp"></a>
                 <br>
-                <a href="./recipes/bangbangshrimp.html">Bang Bang Shrimp</a>🍤
+                <a href="./recipes/bangbangshrimp.html">Bang Bang Shrimp</a> 🍤
             </li>
             <br>
             <li>
                 <a href="./recipes/pitapizza.html"><img src="./images/pita_pizza.jpg" width="200" height="200" alt="image of pita pizzas"></a>
                 <br>
-                <a href="./recipes/pitapizza.html">Low Calorie Pita Pizza</a>🍕
+                <a href="./recipes/pitapizza.html">Low Calorie Pita Pizza</a> 🍕
             </li>
         </ul>
 
