--- a/recipes/pitapizza.html
+++ b/recipes/pitapizza.html
@@ -10,13 +10,36 @@
         <title>Pita Pizza Recipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/odin-recipes/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <a href="/odin-recipes/index.html">Home</a>
+        <h1>Low Calorie Pita Pizza</h1>
+        <img src="../images/pita_pizza.jpg" width="400" height="400" alt="image of pita pizzas">
+        <h3>Description:</h3>
+        <p>Everyone loves pizza but takeout gets expensive. Something we have been making a lot lately is this Pita Pizza Recipe. It is so easy, frugal and really delicious. Everyone gets to make their own pizza and it is fun too. My kids love to make these and everyone can choose their favorite toppings.</p>
+
+        <h3>Ingredients:</h3>
+            <ul>
+                <li>6 Pita Breads</li>
+                <li>3/4 cup Marinara Sauce</li>
+                <li>3 cups Shredded Mozzarella Cheese</li>
+                <li>36 Pieces of Pepperonis or any other toping you'd like!</li>
+            </ul>
+
+        <h3>Steps:</h3>
+            <ol>
+                <li>Preheat the oven to 400 degrees F.  Place the pita breads on baking sheets.</li>
+                <li>Spoon 2 Tbsp of the Marinara Sauce on each pita.</li>
+                <li>Then place 1/2 cup of the shredded mozzarella cheese on each pita. (or as much as you'd like..we won't tell!)</li>
+                <li>Top with what ever toppings you'd like.</li>
+                <li>Bake uncovered for 10-12 minutes until the pita is browned slightly and the cheese is melted.</li>
+                <li>Cool on the baking sheet for 4-5 minutes, slice and enjoy!</li>
+            </ol>
+ 
         <script src="" async defer></script>
     </body>
 </html>
