--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -25,11 +25,11 @@
         <h3>Ingredients:</h3>
             <ul>
                 <li>1 recipe pastry for a 9 inch double crust pie</li>
-                <li>½ cup unsalted butter</li>
+                <li>1/2 cup unsalted butter</li>
                 <li>3 tablespoons all-purpose flour</li>
-                <li>¼ cup water</li>
-                <li>½ cup white sugar</li>
-                <li>½ cup packed brown sugar</li>
+                <li>1/4 cup water</li>
+                <li>1/2 cup white sugar</li>
+                <li>1/2 cup packed brown sugar</li>
                 <li>8 Granny Smith apples - peeled, cored and sliced</li>
             </ul>
 
