--- a/recipes/bangbangshrimp.html
+++ b/recipes/bangbangshrimp.html
@@ -10,13 +10,40 @@
         <title>Bang Bang Shrimp Recipe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/odin-recipes/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <a href="/odin-recipes/index.html">Home</a>
+        <h1>Bang Bang Shrimp</h1>
+        <img src="../images/bang_bang_shrimp.jpg" width="400" height="400" alt="image of bang bang shrimp">
+        <h3>Description:</h3>
+        <p>Bang Bang Shrimp from the Bonefish Grill is crispy, creamy, sweet and spicy with just a few ingredients and tastes just like the most popular appetizer on the menu.</p>
+
+        <h3>Ingredients:</h3>
+            <ul>
+                <li>1/2 cup mayonnaise</li>
+                <li>1/4 cup Thai sweet chili sauce</li>
+                <li>1/4 teaspoon Sriracha</li>
+                <li>1 pound shrimp shelled and deveined</li>
+                <li>1/2 cup buttermilk</li>
+                <li>3/4 cup cornstarch</li>
+                <li>canola oil for frying</li>
+            </ul>
+
+        <h3>Steps:</h3>
+            <ol>
+                <li>In a small bowl add the mayonnaise, Thai sweet chili sauce and Sriracha and stir.</li>
+                <li>In a second bowl add the shrimp and buttermilk and stir to coat all the shrimp.</li>
+                <li>Remove from the buttermilk and let excess liquid drain away.</li>
+                <li>Coat the shrimp in cornstarch.</li>
+                <li>In a heavy bottomed pan add 2-3 inches of canola oil and heat to 375 degrees</li>
+                <li>Fry the shrimp until lightly brown, 1-2 minutes on each side.</li>
+                <li>Once fried coat with the sauce and serve immediately.</li>
+            </ol>
+
         <script src="" async defer></script>
     </body>
 </html>
